update document card preview

--- a/app/components/agenda/agenda-overview.hbs
+++ b/app/components/agenda/agenda-overview.hbs
@@ -1,4 +1,4 @@
-<div class="vlc-agenda-items auk-u-m-8 {{if this.isEditingOverview 'au-agenda-items-edit'}}">
+<div class="vlc-agenda-items auk-u-m-8 {{if this.isEditingOverview 'au-c-agenda-items-edit'}}">
   {{#if this.isEditingOverview}}
     <ChangesAlert
       @message="U kan enkel de volgorde van de nieuwe mededelingen en nota's aanpassen. Wijzigingen worden onmiddellijk opgeslagen."
