--- a/app/styles/prototype/_search.scss
+++ b/app/styles/prototype/_search.scss
@@ -67,7 +67,8 @@
   overflow: visible;
 }
 
-.au-u-para-small {
+.au-u-para-small,
+.vlc-document-card-content__meta {
   .au-c-link {
     font-size: inherit;
     vertical-align: initial;
