--- a/app/templates/agenda/agendaitems/agendaitem/index.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/index.hbs
@@ -3,7 +3,9 @@
   as |decisionActivity|
 }}
   {{#if decisionActivity.isRetracted}}
-    <Auk::Alert @skin="warning" @message={{t "retracted-item"}} />
+    <Agenda::Agendaitem::AgendaitemRetracted
+      @subcase={{this.subcase}}
+    />
   {{else if decisionActivity.isPostponed}}
     <Agenda::Agendaitem::AgendaitemPostponed
       @meeting={{this.meeting}}
