move agenda label to header

--- a/app/components/agenda/agenda-header.hbs
+++ b/app/components/agenda/agenda-header.hbs
@@ -15,12 +15,17 @@
                 {{moment-format @meeting.plannedStart "HH:mm"}}
               {{/unless}}
             </h4>
+            {{#if @currentAgenda.status.isDesignAgenda}}
+            <AuPill @size="small" @skin="ongoing">Geopend</AuPill>
+            {{else}}
+            <AuPill @size="small">Afgesloten</AuPill>
+            {{/if}}
             {{#if @meeting.kind.label}}
               <span
                 data-test-agenda-header-kind
                 class="auk-u-text-muted auk-body-1"
               >
-                -
+                &nbsp;-
                 {{@meeting.kind.label}}
               </span>
             {{/if}}
