add filter beleidsdomeinen

--- a/app/styles/prototype/_search.scss
+++ b/app/styles/prototype/_search.scss
@@ -68,7 +68,8 @@
 }
 
 .au-u-para-small,
-.vlc-document-card-content__meta {
+.vlc-document-card-content__meta,
+.au-c-sidebar__content {
   .au-c-link {
     font-size: inherit;
     vertical-align: initial;
