--- a/app/templates/search-future/all.hbs
+++ b/app/templates/search-future/all.hbs
@@ -330,6 +330,51 @@
               </select>
             </div>
           </div>
+          <div class="au-c-card au-o-box au-o-box--small">
+            <div class="auk-form-group">
+              <Auk::Label for="ministerName">
+                Beleidsdomeinen
+              </Auk::Label>
+              <select
+                name="login"
+                id="beleidsdomeinen"
+                class="auk-select auk-select--block"
+                value={{this.mandateesBuffer}}
+              >
+                <option value="beleidsdomeinen">Alle beleidsdomeinen</option>
+                <option id="ember148">
+                  Kanselarij, Bestuur, Buitenlandse Zaken en Justitie
+                </option>
+                <option id="Financien">
+                  Financiën en begroting
+                </option>
+                <option id="Economie">
+                  Economie, wetenschap en innovatie
+                </option>
+                <option id="Onderwijs">
+                  Onderwijs en vorming
+                </option>
+                <option id="Welzijn">
+                  Welzijn, volksgezondheid en gezin
+                </option>
+                <option id="Cultuur">
+                  Cultuur, jeugd, sport en media
+                </option>
+                <option id="Werk">
+                  Werk en sociale economie
+                </option>
+                <option id="Landbouw">
+                  Landbouw en visserij
+                </option>
+                <option id="Mobiliteit">
+                  Mobiliteit en openbare werken
+                </option>
+                <option id="Omgeving">
+                  Omgeving
+                </option>
+              </select>
+            </div>
+          </div>
         </div>
       </div>
     </div>
