--- a/app/components/documents/batch-details/batch-documents-details-modal.hbs
+++ b/app/components/documents/batch-details/batch-documents-details-modal.hbs
@@ -14,6 +14,8 @@
                 />
               </th>
             {{/if}}
+            <th>Document datum</th>
+            <th>Document ID</th>
             <th>{{t "document-name"}}</th>
             <th>{{t "document-type"}}</th>
             {{#if (user-may "manage-documents")}}
