--- a/app/components/m-header.hbs
+++ b/app/components/m-header.hbs
@@ -58,10 +58,10 @@
       {{/if}}
     </Auk::Toolbar::Group>
     <Auk::Toolbar::Group @position="right" class="auk-u-mr-3">
-      {{#if this.currentSession.impersonation.user}}
+      {{#if (not-eq this.currentSession.user this.currentSession.ownUser)}}
         <Auk::Toolbar::Item class="auk-u-mr-3">
           <div class="vlc-environment-pill">
-            Je ziet de app als: {{this.currentSession.impersonation.user.firstName}}
+            {{t "you-see-the-app-as" name=this.currentSession.user.firstName}}
           </div>
         </Auk::Toolbar::Item>
       {{/if}}
@@ -100,9 +100,9 @@
         </AuDropdown>
       </Auk::Toolbar::Item>
       <Auk::Toolbar::Item>
-        {{#if this.currentSession.user}}
+        {{#if this.currentSession.ownUser}}
           <AuDropdown
-            @title={{this.currentSession.user.firstName}}
+            @title={{this.currentSession.ownUser.firstName}}
             @alignment="right"
             data-test-m-header-user-actions
           >
@@ -113,7 +113,7 @@
                 role="menuitem"
                 {{on "click" this.toggleShowImpersonateUsers}}
               >
-                Ga terug
+                {{t "back"}}
               </AuButton>
               <AuHr />
               {{#each this.memberships as |membership|}}
@@ -130,19 +130,19 @@
               <div role="menuitem">
                 <Auk::Avatar
                   @icon="user"
-                  @name={{this.currentSession.user.fullName}}
+                  @name={{this.currentSession.ownUser.fullName}}
                 >
-                  <p>{{this.currentSession.user.fullName}}</p>
+                  <p>{{this.currentSession.ownUser.fullName}}</p>
                   <p class="auk-u-text-muted auk-u-text-size--small">
-                    {{or this.currentSession.organization.name this.currentSession.organization.identifier}}
+                    {{or this.currentSession.ownOrganization.name this.currentSession.ownOrganization.identifier}}
                   </p>
                   <p class="au-u-margin-top-tiny auk-u-text-muted auk-u-text-size--small">
-                    {{this.currentSession.role.label}}
+                    {{this.currentSession.ownRole.label}}
                   </p>
                 </Auk::Avatar>
               </div>
               <AuHr />
-              {{! {{#if (user-really-may "impersonate-users")}}
+              {{#if (user-really-may "impersonate-users")}}
                 <AuButton
                   @skin="link"
                   @icon="chevron-right"
@@ -150,9 +150,9 @@
                   {{on "click" this.toggleShowImpersonateUsers}}
                   role="menuitem"
                 >
-                  Gebruiker nabootsen
+                  {{t "impersonate-user"}}
                 </AuButton>
-              {{! {{/if}}
+              {{/if}}
               <AuButton
                 data-test-m-header-user-action-logout
                 @skin="link"
