fix: typo in helper name

--- a/app/templates/search/cases.hbs
+++ b/app/templates/search/cases.hbs
@@ -87,7 +87,7 @@
                 </p>
               </td>
               <td>
-                {{datetim row.created "DD-MM-YYYY HH:mm"}}
+                {{datetime row.created "DD-MM-YYYY HH:mm"}}
               </td>
               <td>
                 {{date row.sessionDates}}
